# praga_core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ASYNC_ARCHITECTURE.md  CACHE_INVALIDATION_ANALYSIS.md  CLAUDE.md  Dockerfile  GOOGLE_DOCS_CACHE_INVALIDATION.md  IMPLEMENTATION_SUMMARY.md  LATEST_VERSION_IMPLEMENTATION.md  README.md  SLACK_SETUP.md  complete_test.py  env.example  last_test_run.txt  page_tracking_mechanism.md  people_service_rewrite_summary.md  provenance_tracking_pragweb_update.md  provenance_tracking_summary.md  pyproject.toml  requirements-pragweb.txt  smithery.yaml  test_async_basic.py  test_async_functionality.py
.github/workflows/: main.yml
docs/: SMITHERY_DEPLOYMENT.md  TESTING_GUIDE.md  adding_new_services.md  api_reference.md  overview.md
docs/integrations/: GOOGLE_OAUTH_SETUP.md  OUTLOOK_OAUTH_SETUP.md
examples/: async_demo.py  null_toolkit.py
examples/google_api/: README.md  app.py  auth.py  calendar_toolkit.py  demo.py  gmail_toolkit.py  google_base_toolkit.py  integration_example.py  mcp_server.py  react_agent_demo.py  requirements.txt  retriever_demo.py  test_tool_integration.py
examples/google_api/auth/: __init__.py  config.py  google_auth.py  slack_auth.py
examples/google_api/pages/: __init__.py  calendar.py  gmail.py  person.py  slack.py
examples/google_api/services/: __init__.py  calendar_service.py  gmail_service.py  google_docs_service.py  people_service.py  slack_service.py
examples/google_api/toolkits/: __init__.py  calendar_toolkit.py  gmail_toolkit.py  google_base_toolkit.py  google_docs_toolkit.py  people_toolkit.py  person_resolver.py  slack_toolkit.py  utils.py
src/praga_core/: __init__.py  action_executor.py  context.py  global_context.py  page_cache.py  page_registry.py  page_router.py  react_agent.py  response.py  retriever.py  retriever_toolkit.py  service.py  tool.py  types.py
src/praga_core/agents/: __init__.py  format_instructions.py  react_agent.py  response.py  router_agent.py  tool.py  toolkit.py
src/praga_core/agents/templates/: react_template.py
src/praga_core/integrations/: __init__.py
src/praga_core/integrations/mcp/: __init__.py  config.py  descriptions.py  resources.py  server.py  tools.py
src/praga_core/page_cache/: REFACTORING_PROPOSAL.md  __init__.py  compat.py  core.py  exceptions.py  provenance.py  provenance_manager.py  query.py  registry.py  schema.py  serialization.py  simple_core.py  storage.py  validator.py
src/praga_core/templates/: __init__.py  react_template.py
src/pragweb/: .app.py.~undo-tree~  app.py  config.py  mcp_server.py  pages.py  secrets_manager.py  summarization.py  toolkit_service.py  utils.py
src/pragweb/api_clients/: __init__.py  base.py
src/pragweb/api_clients/google/: __init__.py  auth.py  calendar.py  client.py  documents.py  email.py  gmail_utils.py  people.py  provider.py  utils.py
src/pragweb/google_api/: __init__.py  auth.py  client.py  utils.py
src/pragweb/pages/: __init__.py  calendar.py  documents.py  email.py  people.py
src/pragweb/services/: __init__.py  calendar.py  documents.py  email.py  people.py
src/pragweb/slack/: __init__.py  auth.py  client.py  ingestion.py  page.py  service.py  utils.py
tests/: README.md  conftest.py  test_context.py  test_init.py  test_paginated_response.py  test_react_agent.py  test_response_parser.py  test_retriever_toolkit.py  test_retriever_toolkit_caching.py  test_retriever_toolkit_core.py  test_retriever_toolkit_integration.py  test_retriever_toolkit_pagination.py  test_tool.py  test_types.py  test_typing.py
tests/core/: test_action_executor.py  test_action_tool.py  test_action_toolkit.py  test_async_functionality.py  test_async_validators.py  test_context.py  test_global_context.py  test_page_cache.py  test_page_router.py  test_paginated_response.py  test_react_agent.py  test_response_parser.py  test_retriever_toolkit_caching.py  test_retriever_toolkit_core.py  test_retriever_toolkit_integration.py  test_retriever_toolkit_pagination.py  test_service.py  test_tool.py  test_type_checking.py  test_types.py
tests/integration/: __init__.py  test_docker_build.py  test_mcp_gmail_integration.py  test_mcp_integration.py  test_mcp_real_actions.py
tests/mcp/: test_mcp_gmail_integration.py  test_mcp_integration.py  test_mcp_real_actions.py
tests/services/: test_calendar_service.py  test_email_service.py  test_email_service_microsoft.py  test_gmail_actions.py  test_gmail_service.py  test_google_api_client.py  test_google_auth_manager.py  test_google_docs_service.py  test_microsoft_auth_manager.py  test_microsoft_integration.py  test_people_comprehensive_search.py  test_people_service.py  test_slack_api_client.py  test_slack_service.py  test_slack_utils.py
(+31 files in other folders)
