[project]
name = "praga_core"
version = "0.0.0dev"
description = "Core library for building Pragmatic RAG Agents"
authors = [
    {name = "Tapan Chugh", email = "tapanc@cs.washington.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework dependencies
    "pydantic>=2.11.5",
    "sqlalchemy[mypy]>=2.0.41",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.3",
    "fastmcp>=2.8.1",
    # Service dependencies (Google APIs, OpenAI, etc.)
    "openai>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.1.0",
    "bs4==0.0.2",
    "chonkie>=1.0.0",
    "tokenizers>=0.21",
    # Microsoft Graph API dependencies
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "msal<=1.33.0b",
    # Development dependencies
    "mypy>=1.5.1",
    "flake8-pyproject==1.2.3",
    "flake8>=6.1.0",
    "autoflake8>=0.4.1",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit==3.5.0",
    "pyproject-autoflake>=1.0.2",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "types-requests>=2.32.4.20250611",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--ignore=tests/integration/"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = "^examples/google_api|tests|scripts"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701,W291"
exclude = "tests/*"

